<resources>
    <string name="app_name">J2W3b</string>
    <string name="action_settings">Settings</string>
    <string name="add_item_label">Add new item to yard sale!</string>
    <string name="set_price_label">Set item price</string>
    <string name="sale_items_label">My Yard Sale Items</string>
    <string name="edit_item_button">Edit Item</string>
    <string name="share_yardsale_button">Share Item</string>
    <string name="find_yardsales">Find Yard Sales</string>
    <string name="add_item_button">Add Item</string>
    <string name="add_item_hint">Enter item name</string>
    <string name="item_name">Item Name</string>
    <string name="item_desc_hint">Enter a description of this item</string>
    <string name="item_price">Item Price</string>
    <string name="price_hint">$15.00</string>
    <string name="save_button">Save Item</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_item_button">Delete Item</string>
    <string name="item_desc">Item Description</string>
    <string name="return_to_item_list_button">View All Items</string>




    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_item_view">ItemViewActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_item">AddItemActivity</string>
</resources>
