<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87b553"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.michellegoldman.j2w3b.AddItemActivity">

    <TextView
        android:id="@+id/addItemLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/add_item_label"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/addItemTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:capitalize="sentences"
        android:gravity="start"
        android:hint="@string/add_item_hint"
        android:paddingLeft="10dp" />

    <TextView
        android:id="@+id/itemDescLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/item_desc"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/itemDescTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:capitalize="sentences"
        android:gravity="start"
        android:hint="@string/item_desc_hint"
        android:paddingLeft="10dp" />

    <TextView
        android:id="@+id/setPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="@string/set_price_label"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editItemPrice"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/price_hint"
        android:inputType="numberDecimal"
        android:paddingLeft="10dp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:onClick="saveItem"
        android:text="@string/save_button" />
</LinearLayout>
