<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d3474538"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginBottom="5dp"
            android:src="@mipmap/yardsale_sign" />

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/item_name"
            android:textSize="36sp"
            android:textColor="#ff2f2423"
            android:textStyle="bold|italic" />


        <TextView
            android:id="@+id/itemDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/item_desc"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:text="@string/item_price"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ff22c7db"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:weightSum="6">

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"

                android:text="@string/delete_item_button" />

            <Button
                android:id="@+id/notifyButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:onClick="implicitSendText"
                android:text="@string/share_yardsale_button" />

            <Button
                android:id="@+id/returnToItemList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:onClick="goToListActivity"
                android:text="@string/return_to_item_list_button" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
