<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff0d8ba3">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="490dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/addItemLabel"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/sale_items_label"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ListView
            android:id="@+id/itemList"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:orientation="vertical">
        <Button style="?android:attr/buttonStyleSmall"
            android:id="@+id/findButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/find_yardsales"
            android:onClick="implicitViewURL"/>

        <Button style="?android:attr/buttonStyleSmall"
            android:id="@+id/addItemButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/add_item_button"
            android:onClick="goToAddItemActivity"/>
    </LinearLayout>

</LinearLayout>





